fix: better view event spacing/margins + improve init

--- a/apps/web/src/styles/schedule-x.css
+++ b/apps/web/src/styles/schedule-x.css
@@ -209,3 +209,8 @@ html[data-theme="dracula"] {
   border-bottom: none !important;
   border-right: none !important;
 }
+
+.sx__calendar-wrapper:not(.sx__is-calendar-small)
+  .sx__time-grid-event.sx__event {
+  margin-inline-start: 1%;
+}
